# android_external_libevdev

./: .editorconfig  .gitignore  .gitlab-ci.yml  Android.mk  CODING_STYLE.md  README.md  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: check-commit.py  ci.template  config.yml  generate-gitlab-ci.py  gitlab-ci-config.yaml  gitlab-ci.tmpl  gitlab-container-delete  meson-build.sh  meson-junit-report.py  start-in-systemd.sh
doc/: Makefile.am  libevdev.doxygen.in
include/: event-names.h
include/linux/: input-event-codes.h
libevdev/: Makefile.am  libevdev-int.h  libevdev-names.c  libevdev-uinput.c  libevdev-uinput.h  libevdev-util.h  libevdev.c  libevdev.h  libevdev.sym  make-event-names.py
test/: Makefile.am  test-common-uinput.c  test-common-uinput.h  test-common.c  test-common.h  test-context.c  test-event-codes.c  test-event-names.c  test-int-queue.c  test-kernel.c  test-libevdev-events.c  test-libevdev-has-event.c  test-libevdev-init.c  test-main.c  test-static-symbols-leak.sh  test-uinput.c
tools/: Makefile.am  libevdev-events.c  libevdev-list-codes.c  libevdev-tweak-device.c  mouse-dpi-tool.1  mouse-dpi-tool.c  publish-doc  sync-with-kernel-headers.sh  touchpad-edge-detector.c
